remove button alignment fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,6 +94,8 @@ body{
   background:none;
   outline:none;
   border:none;
+  padding:0px;
+  margin:0px;
   display:inline-block;
   cursor: pointer;
 }
